<resources>
    <string name="app_name">Football League</string>
    <string name="description">Description</string>
    <string name="detail_league">Detail League</string>
    <string name="no_leagues_image_content_description">No Leagues Found</string>
    <string name="failed_load">Failed to load data</string>
    <string-array name="league_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>
    <string-array name="league_banner">
        <item>@drawable/english_premier_league</item>
        <item>@drawable/french_ligue_1</item>
        <item>@drawable/german_bundesliga</item>
        <item>@drawable/italian_serie_a</item>
        <item>@drawable/spanish_la_liga</item>
        <item>@drawable/american_mayor_league</item>
        <item>@drawable/portugeuese_premiera_liga</item>
        <item>@drawable/australian_a_league</item>
        <item>@drawable/scotish_premier_league</item>
        <item>@drawable/english_league_1</item>
    </string-array>
    <string name="title_match">Match</string>
    <string name="title_goal_details">Goals</string>
    <string name="title_summary">Summary</string>
    <string name="title_yellow_cards">Yellow Cards</string>
    <string name="title_red_cards">Red Cards</string>
</resources>